# cvat-tracks-generator

./: .env  .gitignore  README.md  pyproject.toml
src/cvat_tracks_generator/: cli.py  config.py  cvat_xml.py  detector.py  renderer.py  tracker.py  utils.py
tests/: test_xml.py
