[project]
name = "cvat-tracks-generator"
version = "0.1.0"
description = "CLI tool for generating CVAT tracks"
authors = [
    {name = "Anhelina Honcharuk", email = "anh.honcharuk@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.7",
    "opencv-python>=4.9.0",
    "lxml>=5.2.1",
    "ultralytics>=8.3.0",
    "sahi==0.11.20", 
    "lap>=0.5.12",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
]

[tool.pdm.dev-dependencies]
test = ["pytest>=7.0.0"]

[project.scripts]
cvat-gen = "cvat_tracks_generator.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
